# sample_bears

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
bears/: models.py  urls.py  views.py
bears/management/commands/: parse_bears.py
bears/migrations/: 0001_initial.py  0002_sighting.py
bears/templates/bears/: bear_detail.html  bear_list.html
mysite/: settings.py  urls.py
